--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +29,13 @@
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
-    "import src.manager.evidential as evidential\n",
+    "# import src.manager.evidential as evidential\n",
     "\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "import cv2\n",
     "from src import metrics as _metric\n",
-    "from src.manager.evidential import getMassFcn2D\n",
+    "# from src.manager.evidential import getMassFcn2D\n",
     "import pandas as pd\n",
     "import sys\n",
     "import json\n"
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +175,29 @@
     "filenames = ['log_single_run_pi_current_l1c2.pkl']\n",
     "# filenames = ['log_evidential_pi_current_l1c2.pkl',\n",
     "#              'log_evidential_pi_current_l1c2_2.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_pa_earlier_noexp.pkl']\n",
+    "filenames = ['log_evidential_pa_earlier_annealing.pkl']\n",
+    "filenames = ['log_evidential_pa_current_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_mt_earlier_annealing.pkl']\n",
+    "filenames = ['log_evidential_ms_earlier_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_pi_earlier_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_ms_current_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_mt_current_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_evidential_pi_current_annealing.pkl']\n",
+    "\n",
+    "\n",
+    "filenames = ['log_single_run_pi_current_annealing.pkl']\n",
+    "\n",
+    "filenames = ['log_mcd_pi_current_annealing.pkl']\n",
+    "\n",
+    "\n",
+    "\n",
     "results = []\n",
     "for filename in filenames:\n",
     "    with open(os.path.join(folder, filename), 'rb') as handle:\n",
@@ -195,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[72.75, 62.45, 63.85, 70.02, 60.82, 67.77, 66.32, 64.58, 45.24, 59.82]\n"
+      "[66.9, 80.99, 71.84, 63.01, 67.17, 79.08, 78.15, 80.22, 71.53, 75.71]\n"
      ]
     }
    ],
@@ -237,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -254,24 +268,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     F1  F1 low  F1 high  F1 audit    UEO\n",
-      "0  72.8    81.4     22.8      82.9  0.116\n",
-      "1  62.4    70.9     16.5      73.0  0.137\n",
-      "2  63.8    72.0     21.7      75.0  0.116\n",
-      "3  70.0    79.9     26.0      82.7  0.128\n",
-      "4  60.8    67.4     13.0      69.6  0.104\n",
-      "5  67.8    76.5     23.4      79.1  0.126\n",
-      "6  66.3    75.4     24.8      78.4  0.128\n",
-      "7  64.6    73.8     15.1      75.4  0.144\n",
-      "8  45.2    46.9      6.5      49.5  0.036\n",
-      "9  59.8    67.4     15.3      70.3  0.121\n"
+      "metric, len(df_metric) pred_entropy 10\n",
+      "len(df) 10\n",
+      "metric, len(df_metric) pred_var 10\n",
+      "len(df) 20\n",
+      "metric, len(df_metric) MI 10\n",
+      "len(df) 30\n",
+      "metric, len(df_metric) KL 10\n",
+      "len(df) 40\n",
+      "  Uncertainty Metric    F1 F1 low F1 high F1 audit    UEO\n",
+      "0       pred_entropy  66.9   76.2    20.2     79.0   0.12\n",
+      "1       pred_entropy  81.0   92.2    48.4     94.0  0.129\n",
+      "2       pred_entropy  71.8   81.7    24.9     84.2  0.125\n",
+      "3       pred_entropy  63.0   73.5    15.9     76.7  0.146\n",
+      "4       pred_entropy  67.2   75.9    22.7     79.3  0.123\n",
+      "5       pred_entropy  79.1   88.9    35.8     90.7  0.114\n",
+      "6       pred_entropy  78.2   88.8    37.7     91.1  0.122\n",
+      "7       pred_entropy  80.2   90.2    39.0     91.8  0.118\n",
+      "8       pred_entropy  71.5   81.7    35.6     85.2  0.137\n",
+      "9       pred_entropy  75.7   86.1    26.2     87.8  0.131\n",
+      "0           pred_var  66.9   81.1    41.1     86.1  0.203\n",
+      "1           pred_var  81.0   94.1    59.1     96.1  0.153\n",
+      "2           pred_var  71.8   85.6    34.8     88.1  0.177\n",
+      "3           pred_var  63.0   75.7    23.9     79.2  0.183\n",
+      "4           pred_var  67.2   80.7    33.1     84.2  0.197\n",
+      "5           pred_var  79.1   92.9    51.4     94.9  0.163\n",
+      "6           pred_var  78.2   92.0    55.3     94.7  0.164\n",
+      "7           pred_var  80.2   93.7    50.0     95.3  0.159\n",
+      "8           pred_var  71.5   87.1    44.5     90.8  0.209\n",
+      "9           pred_var  75.7   89.6    49.9     92.2  0.189\n",
+      "0                 MI  66.9   76.6    19.8     79.6  0.124\n",
+      "1                 MI  81.0   89.1    56.3     91.6  0.103\n",
+      "2                 MI  71.8   80.4    22.5     82.3  0.109\n",
+      "3                 MI  63.0   68.7    17.8     71.5  0.082\n",
+      "4                 MI  67.2   74.1    31.5     77.0  0.106\n",
+      "5                 MI  79.1   89.1    36.4     90.7  0.117\n",
+      "6                 MI  78.2   89.3    43.0     91.5  0.129\n",
+      "7                 MI  80.2   89.1    43.1     90.7  0.108\n",
+      "8                 MI  71.5   80.5    42.1     84.3   0.13\n",
+      "9                 MI  75.7   84.5    47.5     87.0  0.127\n",
+      "0                 KL  66.9   74.8    17.5     78.0  0.101\n",
+      "1                 KL  81.0   88.2    56.9     90.7  0.093\n",
+      "2                 KL  71.8   78.2    20.4     79.7  0.081\n",
+      "3                 KL  63.0   67.3    16.2     70.3  0.062\n",
+      "4                 KL  67.2   73.2    33.0     76.1  0.096\n",
+      "5                 KL  79.1   87.3    31.8     88.8  0.096\n",
+      "6                 KL  78.2   88.4    42.0     90.6   0.12\n",
+      "7                 KL  80.2   88.2    42.8     89.8  0.099\n",
+      "8                 KL  71.5   79.2    42.6     83.0  0.115\n",
+      "9                 KL  75.7   82.8    49.3     85.4  0.108\n"
      ]
     }
    ],
@@ -314,11 +366,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('output/log/results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_df = df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F1          68.8900\n",
+       "F1 low      77.1600\n",
+       "F1 high     25.9100\n",
+       "F1 audit    79.5300\n",
+       "UEO          0.1183\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_df"
    ]
   },
   {
